--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Cafetería SASS | Home</title>
+   <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
-   
+   <h1>Cafetería</h1>
 </body>
 </html>
