_mixins.scss file is created in the path src/scss/base

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,13 @@
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="build/css/app.css">
 </head>
+
 <body>
    <header class="header header-inicio">
       <div class="contenido-header contenedor">
          <div class="barra">
             <div class="logo">
-
+               <img src="build/img/logo.svg" alt="logo cafe">
             </div>
             <nav class="nav-principal">
                <a href="index.html">Inicio</a>
@@ -31,4 +33,5 @@
       </div>
    </header>
 </body>
+
 </html>
