The main section is added in index.html, with its styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
    <title>Cafetería SASS | Home</title>
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+   <link
+      href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital,wght@0,400;0,700;1,400&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
    <link rel="stylesheet" href="build/css/app.css">
 </head>
 
@@ -32,6 +34,71 @@
          </div>
       </div>
    </header>
+
+   <main class="contenedor contenido-principal text_center">
+      <section class="conoce">
+         <h2><span>Conoce más</span> sobre nosotros</h2>
+         <p>Morbi imperdiet, nibh non bibendum bibendum, nulla nulla laoreet odio, vel rhoncus erat sapien eu arcu. Orci
+            varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus odio elit,
+            efficitur nec tellus sed, vulputate vulputate tortor. Cras et ipsum gravida, consectetur diam nec, pretium
+            ligula. Sed posuere hendrerit efficitur. Curabitur posuere volutpat vehicula. Cras consequat erat ac justo
+            condimentum, vitae cursus risus blandit.</p>
+      </section>
+
+      <section class="iconos">
+         <ul class="listado-iconos">
+            <li>
+               <img src="build/img/icono_cafe.svg" alt="icono de cafe">
+               <p>Café</p>
+            </li>
+            <li>
+               <img src="build/img/icono_postre.svg" alt="icono de cafe">
+               <p>Postres</p>
+            </li>
+            <li>
+               <img src="build/img/icono_te.svg" alt="icono de cafe">
+               <p>Té</p>
+            </li>
+         </ul>
+      </section>
+
+      <section class="experiencia">
+         <h2><span>Vive la</span> experiencia</h2>
+         <div class="galeria">
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_01.jpg" alt="galeria">
+            </div>
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_02.jpg" alt="galeria">
+            </div>
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_03.jpg" alt="galeria">
+            </div>
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_04.jpg" alt="galeria">
+            </div>
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_05.jpg" alt="galeria">
+            </div>
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_06.jpg" alt="galeria">
+            </div>
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_07.jpg" alt="galeria">
+            </div>
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_08.jpg" alt="galeria">
+            </div>
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_09.jpg" alt="galeria">
+            </div>
+            <div class="imagen">
+               <img src="build/img/galeria/galeria_10.jpg" alt="galeria">
+            </div>
+         </div>
+      </section>
+   </main>
+
 </body>
 
 </html>
