Added the testimonials section and footer in index.html, with its css styles.

--- a/index.html
+++ b/index.html
@@ -170,6 +170,37 @@
          </section>
       </div>
    </section>
+
+   <section class="contenedor nuestros-testimoniales margin-negativo-10 bg-white">
+      <h2><span>Lo que dicen nuestros</span> Clientes</h2>
+      <div class="testimonial">
+         <p>Sit amet consectetur adipisicing elit. Consequuntur sint dolor at, totam cumque esse commodi aspernatur, a,
+            sunt vitae omnis magni! Possimus doloremque voluptate earum aperiam modi? Odit, officiis!</p>
+         <p class="autor">- Samuel Florez</p>
+      </div>
+   </section>
+
+   <footer class="footer">
+      <div class="contenedor contenido-footer bg-white">
+         <div class="footer-box ubicacion">
+            <h3>Ubicación</h3>
+            <p>Av Calle 26 - 32</p>
+            <p>Bogotá, Colombia</p>
+         </div>
+         <div class="footer-box reservacion">
+            <h3>Reservas</h3>
+            <p>Tel. 320-522-456</p>
+            <a href="tel:+320522456">Llamar</a>
+         </div>
+         <div class="footer-box horario">
+            <h3>Horario</h3>
+            <p>Lun - Jue: 11:00 - 22:00</p>
+            <p>Vie - Sab: 09:00 - 24:00</p>
+            <p>Dom: Cerrado</p>
+         </div>
+      </div>
+      <p class="copyright">Todos los derechos reservados | Caferería SASS &copy; 2024</p>
+   </footer>
 </body>
 
 </html>
